# c_matlab_api_example

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp  test_api.cpp
scripts/: create_clangd.sh
tests/: test_api.cpp  test_plot.cpp  test_streambuffer.cpp  test_string.cpp
